# 2-

./: README.md  debugger.py  globals.py  keyboard_input.py  main.py  pyproject.toml
Assets/: 1.txt  _딱지.txt  template.py  딱지temp.py
Games/: _1무궁화꽃.py  _2뽑기.py  _3줄다리기.py  _4구슬치기.py  _5징검다리.py  _6오징어.py  __init__.py  s노숙자.py  s딱지.py
grfx/: __init__.py  drawer.py
